# KesTREL

./: .dockerignore  .editorconfig  .env.example  .git-commit-msg.tmp  .gitignore  ACCEPTABLE_USE.md  AGENT_EXECUTION_PROTOCOL.md  AGENT_RESEARCH.md  AUDIT.md  AUDIT_V2.md  CHANGELOG.md  CONTRIBUTING.md  CTF_CHEATSHEET.md  CTF_ECOSYSTEM_RESEARCH.md  DEVELOPMENT_HANDBOOK.md  DOMAIN_MODEL.md  Dockerfile  GAP_ANALYSIS.md  LICENSE  LLM_GUIDANCE.md  MANIFEST.in  MASTER_PLAN.md  PRODUCT_LINES.md  QUICKSTART.md  README.md  README_FOR_AGENT.md  RFC_AUDIT_PREFLIGHT.md  ROADMAP_V2.md  SECURITY.md  SKILLS_INTEGRATION.md  SPEC_AUTHORING_CHECKLIST.md  THREAT_MODEL.md  TOOLS_MATRIX.md  UI_STRATEGY.md  alembic.ini  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  pull_request_template.md
config/: cursor-mcp.json.example  default.yaml
docs/: RELEASE_CHECKLIST.md  index.md  internal-firepower.md  quickstart.md  reference.md  releasing.md  user-manual.zh-CN.md
rfcs/: INDEX.md  RFC-000-TEMPLATE.md  RFC-001-uv-lock-dependencies.md  RFC-002-github-actions-ci.md  RFC-003-credential-store.md  RFC-003a-credential-service.md  RFC-003b-credential-integration.md  RFC-004-rate-limiting.md  RFC-005-safe-path.md  RFC-006-fastapi-skeleton.md  RFC-007-htmx-base-layout.md  RFC-008-engagement-routes.md  RFC-009-finding-routes.md  RFC-010-tool-launcher-sse.md  RFC-010a-tool-launcher-backend.md  RFC-010b-tool-launcher-sse-ui.md  RFC-011-settings-page.md  RFC-012-http-basic-auth.md  RFC-A04-edition-and-feature-flags.md  RFC-B05a-impacket-guidance.md  RFC-B05b1-sliver-server-guidance.md  RFC-B05b2-sliver-ops-guidance.md  RFC-B07a-offensive-readiness-scoring.md  RFC-B07b-cve-enrichment-client.md  RFC-B07c-readiness-mcp-tools.md  RFC-B07d-readiness-webui-cards.md  RFC-B07e-fire-control-webui-packet.md  RFC-G01-subfinder-tool.md  RFC-G02-httpx-probe-tool.md  RFC-G03-nmap-wrapper.md  RFC-G04-ffuf-wrapper.md  RFC-G06-impacket-scripts.md  RFC-G08-bloodhound-ce-rest-client.md  RFC-H01-rename-kestrel-mcp.md  RFC-H02-release-pipeline.md  RFC-H03-mkdocs-material-site.md  RFC-H04-v1-release-gate.md  RFC-STUBS-B-D-E-F-G-H.md  RFC-T00-team-unleashed-mode.md  RFC-T00b-team-runtime-feature-gates.md  (+7 more)
scripts/: debug_settings.py  full_verify.py  install-deps-fast.ps1  install.ps1  install.sh  (+5 more)
(+237 files in other folders)
