[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "redteam-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing 40+ offensive security tools to LLMs (Shodan, Nuclei, Sliver, Havoc, Evilginx, Ligolo-ng, Caido)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Red-Team MCP Authors" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "pentesting",
    "red-team",
    "llm-tools",
    "shodan",
    "nuclei",
    "sliver",
    "havoc",
    "evilginx",
    "ligolo",
    "caido",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "anyio>=4.3",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "shodan>=1.31",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "mako>=1.3",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
redteam-mcp = "redteam_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/redteam-mcp"
Documentation = "https://github.com/your-org/redteam-mcp#readme"
Issues = "https://github.com/your-org/redteam-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redteam_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B", "SIM", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
